# Thesis

./: .env  create_tables.sql  create_users_table.sql  edges.csv  import_postgres.sh  import_traffic_data.sh  manhattan.osm.pbf  map_mini.osm  map_mini.pbf  nodes.csv  osm_parser.py  output_nodes.txt  output_relations.txt  setup_psql.py  test_osm_parser.py  traffic_data.csv  traffic_data.xlsx
get-shortest-path/: Cargo.toml  response.json
get-shortest-path-radical/: Cargo.toml  response.json
get-shortest-path-radical/src/: main.rs
get-shortest-path/src/: database.rs  dijkstra.rs  main.rs
map/: go.mod  go.sum  main.go
map/static/: index.html
v0/src/: main.rs
v0/src/database/: graph_edges_parser.rs
v1/: Cargo.toml
v1/src/: database.rs  dijkstra.rs  main.rs
v1/src/database/: graph_edges_parser.rs  output_nodes.txt  output_ways.txt
v2/: Cargo.toml
v2/src/: database.rs  dijkstra.rs  main.rs
v3/: Cargo.toml
v3/src/: database.rs  main.rs
v4/: Cargo.toml
v4/src/: database.rs  dijkstra.rs  main.rs
v5/: Cargo.toml
v5/src/: database.rs  main.rs
