[package]
name = "get-shortest-path"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.13.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geoutils = "0.5.1"
reqwest = { version = "0.12.3", features = ["json", "native-tls-vendored"] }
lambda_http = "0.8.3"
