[package]
name = "v4"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geoutils = "0.5.1"