[package]
name = "v5"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geoutils = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }